[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/Level_Select/Level_LevelButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Menu_Buttons/back_arrow_hover.png" type="Texture" id=2]
[ext_resource path="res://World/Level_Select/Level_Select.gd" type="Script" id=3]
[ext_resource path="res://Assets/Music/bg_music_level_select.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/mouse.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu_Buttons/back_arrow.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu_Buttons/music_available.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu_Buttons/music_available_hover.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu_Buttons/music_disable_hover.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu_Buttons/music_disable.png" type="Texture" id=10]

[node name="LevelBackDrop" type="TextureRect"]
margin_right = 640.0
margin_bottom = 358.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton" parent="." instance=ExtResource( 1 )]
position = Vector2( 178.341, 219.417 )
level_select = 1

[node name="LevelButton2" parent="." instance=ExtResource( 1 )]
position = Vector2( 317.832, 219.417 )
level_select = 2

[node name="Label" parent="LevelButton2/TextureButton" index="0"]
text = "2"

[node name="LevelButton3" parent="." instance=ExtResource( 1 )]
position = Vector2( 457.323, 219.417 )
level_select = 3

[node name="Label" parent="LevelButton3/TextureButton" index="0"]
text = "3"

[node name="LevelButtonTutorial" parent="." instance=ExtResource( 1 )]
position = Vector2( 317.832, 131 )

[node name="Label" parent="LevelButtonTutorial/TextureButton" index="0"]
text = "0"

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="BackArrow" type="TextureButton" parent="."]
margin_left = 18.0
margin_top = 11.0
margin_right = 55.0
margin_bottom = 38.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicAvailable" type="TextureButton" parent="."]
margin_left = 595.417
margin_top = 323.21
margin_right = 638.417
margin_bottom = 365.21
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="MusicDisable" type="TextureButton" parent="."]
margin_left = 595.0
margin_top = 323.0
margin_right = 638.0
margin_bottom = 366.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mouse" type="Sprite" parent="."]
position = Vector2( 199.377, 118.392 )
scale = Vector2( 0.007, 0.007 )
texture = ExtResource( 5 )
[connection signal="pressed" from="BackArrow" to="." method="_on_BackArrow_pressed"]
[connection signal="pressed" from="MusicAvailable" to="." method="_on_MusicAvailable_pressed"]
[connection signal="pressed" from="MusicDisable" to="." method="_on_MusicDisable_pressed"]

[editable path="LevelButton"]

[editable path="LevelButton2"]

[editable path="LevelButton3"]

[editable path="LevelButtonTutorial"]
